--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha03"
+    implementation "androidx.core:core-splashscreen:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
