--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha03"
     implementation "androidx.core:core-splashscreen:1.0.0"
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
