--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
