--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,14 @@ buildscript {
     ext {
         compose_ui_version = '1.3.2'
     }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.7.20"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.19'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
