--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -61,30 +65,40 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material:1.3.1"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
-    implementation "androidx.navigation:navigation-compose:2.5.3"
-    implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha03"
     implementation "androidx.core:core-splashscreen:1.0.0"
-    implementation 'com.google.code.gson:gson:2.8.9'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
+
+//    live data
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+//    view model
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+//    navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
+
+//    icons
+    implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha03"
+//    gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+//    hilt for DI
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
+//    proto datstore
     implementation "androidx.datastore:datastore:1.1.0-alpha01"
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3"
     implementation(platform("org.jetbrains.kotlinx:kotlinx-serialization-bom:1.3.3"))
-
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-
     implementation "com.google.protobuf:protobuf-javalite:3.21.5"
     implementation 'com.google.protobuf:protobuf-kotlin-lite:3.21.5'
 
+//    room database
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -94,9 +108,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test:runner:1.5.1'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'androidx.test:rules:1.5.0'
+    testImplementation 'androidx.test:runner:1.5.1'
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    testImplementation 'org.json:json:20180813'
+    testImplementation 'androidx.test:core-ktx:1.5.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.4'
+
     testImplementation "androidx.room:room-testing:$room_version"
 
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
