--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:name=".TimepieceApplication"
         android:allowBackup="true"
@@ -13,6 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TimePiece"
         tools:targetApi="32">
+        <service
+            android:name=".service.stopwatch.StopWatchService"
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
