--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     signingConfigs {
@@ -57,7 +63,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
     packagingOptions {
         resources {
@@ -85,7 +91,7 @@ tasks.getByPath("preBuild").dependsOn("ktlintFormat")
 
 dependencies {
     def activity_version = "1.6.1"
-    def room_version = "2.4.3"
+    def room_version = "2.5.0"
     def lifecycle_version = "2.5.1"
 
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -108,9 +114,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
 
 //    icons
-    implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha03"
+    implementation "androidx.compose.material:material-icons-extended:1.4.0-alpha05"
 //    gson
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
 //    hilt for DI
     implementation "com.google.dagger:hilt-android:2.44"
@@ -132,23 +138,23 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     annotationProcessor("androidx.room:room-compiler:$room_version")
-    implementation 'androidx.room:room-ktx:2.4.3'
+    implementation "androidx.room:room-ktx:$room_version"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    androidTestImplementation 'androidx.test:runner:1.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     androidTestImplementation "com.google.truth:truth:1.0.1"
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation 'androidx.test:rules:1.5.0'
-    testImplementation 'androidx.test:runner:1.5.1'
+    testImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:core:1.5.0'
     testImplementation 'org.json:json:20180813'
     testImplementation 'androidx.test:core-ktx:1.5.0'
-    testImplementation 'androidx.test.ext:junit-ktx:1.1.4'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.5'
 
     testImplementation "androidx.room:room-testing:$room_version"
 
